# pgp-serve

./: .env  Cargo.toml
src/: gpg.rs  main.rs  reader.rs  web.rs
test/: jim_morrison_pri.asc  jim_morrison_pub.asc
