[package]
name = "pgp-serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.5" }
clap = { version = "4", features = ["derive"] }
anyhow = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["full"] }
pgp = { version = "0.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0" }
dotenv = "0.15.0"
